--- a/ui/package.json
+++ b/ui/package.json
@@ -22,7 +22,14 @@
     "vue": "^2.5.17",
     "vue-hot-reload-api": "^2.3.1",
     "vue-router": "^3.0.1",
-    "vue-stash": "^2.0.1-beta"
+    "vue-stash": "^2.0.1-beta",
+    "deasync": "0.1.16"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^2.2.0",
@@ -30,7 +37,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-vue": "^2.0.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "5.0.0",
     "parcel-bundler": "^1.9.7",
     "standard": "^12.0.1",
     "vue-template-compiler": "^2.5.17"
