--- a/ui/.babelrc
+++ b/ui/.babelrc
@@ -7,5 +7,11 @@
     }],
     "vue"
   ],
-  "plugins": [ "transform-runtime" ]
+  "plugins": [
+    ["@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
+  ]
 }
