--- a/ui/package.json
+++ b/ui/package.json
@@ -13,32 +13,34 @@
   "license": "ISC",
   "dependencies": {
     "apexcharts": "^1.5.6",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "britecharts": "^2.9.6",
     "buefy": "^0.6.7",
     "chart.js": "^2.7.2",
     "d3-selection": "^1.3.2",
-    "lodash": "^4.17.11",
+    "deasync": "0.1.16",
+    "lodash": "^4.17.20",
     "vue": "^2.5.17",
     "vue-hot-reload-api": "^2.3.1",
     "vue-router": "^3.0.1",
-    "vue-stash": "^2.0.1-beta",
-    "deasync": "0.1.16"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ]
+    "vue-stash": "^2.0.1-beta"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-export-default-from": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-react": "^7.12.7",
+    "@types/react": "^17.0.0",
     "@vue/component-compiler-utils": "^2.2.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-vue": "^2.0.0",
     "node-sass": "5.0.0",
-    "parcel-bundler": "^1.9.7",
+    "parcel-bundler": "^1.12.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
     "standard": "^12.0.1",
     "vue-template-compiler": "^2.5.17"
   },
